[package]
name = "tinymodelserver"
version = "0.1.0"
edition = "2021"
description = "Tiny OpenAI-compatible local server for Gemma 4 (GGUF) + fastembed multilingual embeddings"

[[bin]]
name = "tinymodelserver"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "rustls-tls"] }

# CPU/portable everywhere. Metal is added only on macOS below.
llama-cpp-2 = { version = "0.1" }
fastembed = "5"

# Enable Metal GPU acceleration on macOS only.
[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-2 = { version = "0.1", features = ["metal"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
