[package]
name = "tinymodelserver"
version = "0.1.0"
edition = "2021"
description = "Tiny OpenAI-compatible local server for PrismML Bonsai (1-bit, via OxiBonsai) + fastembed multilingual embeddings"

[[bin]]
name = "tinymodelserver"
path = "src/main.rs"

[[example]]
name = "bonsai_spike"
path = "examples/bonsai_spike.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
base64 = "0.22"
minijinja = { version = "2", features = ["loop_controls", "json"] }
minijinja-contrib = { version = "2", features = ["pycompat"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "rustls-tls"] }

fastembed = "5"

# Pure-Rust 1-bit inference engine for Bonsai (Q1_0). No C/C++/cmake.
# Metal is enabled only on macOS (see target dependency below).
oxibonsai-core = "0.2.2"
oxibonsai-runtime = { version = "0.2.2", default-features = false }

# Enable Metal GPU acceleration on macOS only.
[target.'cfg(target_os = "macos")'.dependencies]
oxibonsai-runtime = { version = "0.2.2", default-features = false, features = ["metal"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
# Unwind (not abort) so a panic inside the inference engine can be contained to
# a single request via catch_unwind instead of killing the whole server.
panic = "unwind"
